# EmbLinux_Project

./: .gitignore  CMakeLists.txt  main.c  readme.md
doc/: flow_diagramm.drawio
header/: file_helper.h  gpio_control.h  per_IncludeMcuLibConfig.h  per_axis.h  per_display.h  rest_controller.h  step_choose.h  step_contoller.h  step_idle.h  step_init.h  step_search.h  step_stop.h  tcp_helper.h
header/mcuLib/config/: McuWaitconfig.h
header/mcuLib/src/: McuGPIO.c  McuGPIO.h  McuLib.h  McuRTOS.h
log/: results.csv
scource/: gpio_control.c  tcp_helper.c
source/: file_helper.c  gpio_control.c  per_axis.c  per_display.c  rest_controller.c  step_choose.c  step_controller.c  step_idle.c  step_init.c  step_search.c  step_stop.c  tcp_helper.c
